@@ -46,9 +46,9 @@ public class CTCSubFieldPackager extends ISOBaseValidatingPackager {
     public byte[] pack ( ISOComponent c ) throws ISOException {
         try     {
             Map tab = c.getChildren();
-            StringBuffer sb = new StringBuffer();
+            StringBuilder sb = new StringBuilder();
             for ( int i = 0; i < fld.length; i++ ) {
-                ISOField f = (ISOField) tab.get (new Integer(i));
+                ISOField f = (ISOField) tab.get (Integer.valueOf(i));
                 if ( f != null ) {
                     sb.append ( new String( fld[i].pack( f ) ) );
                 }
@@ -94,7 +94,7 @@ public class CTCSubFieldPackager extends ISOBaseValidatingPackager {
         try {
             Map tab = c.getChildren();
             for ( int i = 0; i < fldVld.length; i++ ) {
-                ISOField f = (ISOField) tab.get (new Integer(i));
+                ISOField f = (ISOField) tab.get (Integer.valueOf(i));
                 if ( f != null )
                     c.set( fldVld[i].validate( f ) );
             }
